# analysis-ready-code

./: .gitignore  CHANGELOG.md  Makefile  README.md  cli.py  code_processor.py  directory_handler.py  flake.nix  main.py  pyproject.toml
.github/workflows/: ci-nix.yml  ci-python.yml
src/arc/: __init__.py  __main__.py  cli.py  code_processor.py  directory_handler.py  tee.py
tests/unit/: test_arc.py  test_cli.py  test_main.py  test_tee.py
